--- a/.github/workflows/pull-request-target.yml
+++ b/.github/workflows/pull-request-target.yml
@@ -3,16 +3,16 @@
 #
 # NOTE!
 #
-# Please read the README.md file in this directory that defines what should 
+# Please read the README.md file in this directory that defines what should
 # be placed in this file
 #
 ##############################################################################
 ##############################################################################
 
 name: PR Target Workflow
-on: 
+on:
   pull_request_target:
-  
+
 jobs:
   PR-Greeting:
     name: Pull Request Target
@@ -25,45 +25,27 @@ jobs:
           message: |
             ## Our Pull Request Approval Process
 
-            Thanks for contributing! 
-            
-            ### Testing Your Code
-            
-            Remember, your PRs won't be reviewed until these criteria are met:
-            
-            1. We don't merge PRs with poor code quality. 
-                1. Follow coding best practices such that CodeRabbit.ai approves your PR.
-            1. We don't merge PRs with failed tests. 
-                1. When tests fail, click on the `Details` link to learn more.
-                1. Write sufficient tests for your changes (CodeCov Patch Test). Your testing level must be better than the target threshold of the repository
-                1. Tests may fail if you edit sensitive files. Ask to add the `ignore-sensitive-files-pr` label if the edits are necessary.
-            1. We cannot merge PRs with conflicting files. These must be fixed.
-                
-            Our policies make our code better.
+            This PR will be reviewed according to the [Palisadoes Contributing Guidelines](https://developer.palisadoes.org/docs/contributor-guide/contributing) 
 
-            ### Reviewers
-
-            Do not assign reviewers. Our Queue Monitors will review your PR and assign them. 
-            When your PR has been assigned reviewers contact them to get your code reviewed and approved via:
-
-            1. comments in this PR or
-            1. our slack channel
-
-            #### Reviewing Your Code
-
-            Your reviewer(s) will have the following roles:
-
-            1.  arbitrators of future discussions with other contributors about the validity of your changes
-            2.  point of contact for evaluating the validity of your work
-            3.  person who verifies matching issues by others that should be closed.
-            4.  person who gives general guidance in fixing your tests
-
-            ## Other
-
-            :dart: Please be considerate of our volunteers' time. Contacting the person who assigned the reviewers is not advised unless they ask for your input. Do not @ the person who did the assignment otherwise.
+            Thanks for contributing!
 
       - name: Greeting Message to User
         uses: actions/first-interaction@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          pr-message: "Congratulations on making your first PR! :confetti_ball: If you haven't already, check out our [Contributing Guidelines](https://github.com/PalisadoesFoundation/talawa/blob/develop/CONTRIBUTING.md) and [PR Reporting Guidelines](https://github.com/PalisadoesFoundation/talawa/blob/develop/PR_GUIDELINES.md) to ensure that you are following our guidelines for contributing and creating PR."
+          pr-message: 'Congratulations on making your first PR!'
+
+  Check-PR-Issue:
+    runs-on: ubuntu-latest
+    needs: [PR-Greeting]
+    steps:
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
+      - name: Check PR linked issue and assignee
+        uses: arkid15r/check-pr-issue-action@f2c2ac3b8c73b5da96294af9ac3ec174098cf513
+        with:
+          close_pr_on_failure: 'true'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          no_assignee_message: 'The linked issue must be assigned to the PR author.'
+          no_issue_message: 'The PR must be linked to an issue assigned to the PR author.'
+          require_assignee: 'true'
+          skip_users_file_path: '.github/workflows/config/check-pr-issue-skip-usernames.txt'
