--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,7 +21,7 @@ env:
   # Test concurrency: defaults to nproc, capped at 4 (override if needed)
   # Note: Flutter 3.32.x may have --concurrency flag behavior issues
   FLUTTER_TEST_CONCURRENCY: 4
-  TOTAL_SHARDS: 4
+  TOTAL_SHARDS: 12
 
 jobs:
   Flutter-Codebase-Check:
@@ -319,7 +319,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [0, 1, 2, 3]
+        shard: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -357,9 +357,23 @@ jobs:
     name: Merge Coverage Reports
     runs-on: ubuntu-latest
     needs: [Flutter-Testing]
-    if: ${{ !cancelled() && needs.Flutter-Testing.result == 'success' }}
+    if: success()
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout the Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Fetch base branch for Codecov comparison
+        run: |
+          set -e
+          echo "Fetching base branch: ${{ github.event.pull_request.base.ref }}"
+          if ! git fetch origin ${{ github.event.pull_request.base.ref }} 2>&1; then
+            echo "ERROR: Failed to fetch base branch '${{ github.event.pull_request.base.ref }}' from origin"
+            exit 1
+          fi
+          echo "Successfully fetched base branch"
+
       - uses: actions/setup-java@v4
         with:
           distribution: "zulu"
@@ -425,6 +439,15 @@ jobs:
             echo "::warning::Only $SF_COUNT files in coverage (expected 50+)"
           fi
 
+      - name: Calculate merge base for Codecov
+        if: steps.check-artifacts.outputs.artifacts_found == 'true'
+        id: get-merge-base
+        run: |
+          MERGE_BASE=$(git merge-base origin/${{ github.event.pull_request.base.ref }} HEAD)
+          echo "Merge base commit: $MERGE_BASE"
+          echo "merge_base=$MERGE_BASE" >> $GITHUB_OUTPUT
+          git show -s --format=%ci $MERGE_BASE
+
       #######################################################################
       # DO NOT DELETE ANY references to env.CODECOV_UNIQUE_NAME in this
       # section. They are required for accurate calculations
@@ -435,10 +458,12 @@ jobs:
         with:
           name: "${{env.CODECOV_UNIQUE_NAME}}"
           token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: false
+          fail_ci_if_error: true
           verbose: true
           exclude: "docs/"
+          gcov_ignore: "docs/"
           files: ./coverage/lcov.info
+          flags: flutter
 
       - name: Test acceptable level of code coverage
         if: steps.check-artifacts.outputs.artifacts_found == 'true'
