--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,7 +24,7 @@ env:
   # Test concurrency: defaults to nproc, capped at 4 (override if needed)
   # Note: Flutter 3.32.x may have --concurrency flag behavior issues
   FLUTTER_TEST_CONCURRENCY: 4
-  TOTAL_SHARDS: 4
+  TOTAL_SHARDS: 12
 
 jobs:
   Merge-Conflict-Check:
@@ -99,7 +99,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [0, 1, 2, 3]
+        shard: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -139,9 +139,21 @@ jobs:
     name: Merge Coverage Reports
     runs-on: ubuntu-latest
     needs: [Flutter-Testing]
-    if: ${{ !cancelled() && needs.Flutter-Testing.result == 'success' }}
+    if: success()
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout the Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Fetch base branch for Codecov comparison
+        run: |
+          set -e
+          echo "Fetching base branch: develop"
+          if git fetch origin develop:develop 2>/dev/null; then
+            echo "Successfully fetched develop branch"
+          else
+            echo "Warning: Could not fetch develop branch, using current HEAD"
+          fi
       - uses: actions/setup-java@v4
         with:
           distribution: "zulu"
@@ -207,6 +219,12 @@ jobs:
             echo "::warning::Only $SF_COUNT files in coverage (expected 50+)"
           fi
 
+      - name: Calculate merge base for Codecov
+        run: |
+          MERGE_BASE=$(git merge-base origin/develop HEAD || echo "HEAD")
+          echo "MERGE_BASE=$MERGE_BASE" >> $GITHUB_ENV
+          echo "Using merge base: $MERGE_BASE"
+
       #######################################################################
       # DO NOT DELETE ANY references to env.CODECOV_UNIQUE_NAME in this
       # section. They are required for accurate calculations
@@ -217,11 +235,12 @@ jobs:
         with:
           name: "${{env.CODECOV_UNIQUE_NAME}}"
           token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: false
+          fail_ci_if_error: true
           verbose: true
           exclude: "docs/"
           gcov_ignore: "docs/"
           files: ./coverage/lcov.info
+          flags: flutter
 
   Android-Build-and-Release:
     if: ${{ github.actor != 'dependabot[bot]' }}
