--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -151,108 +151,24 @@ jobs:
           else
             echo "skip=false" >> $GITHUB_OUTPUT
           fi
-      - name: Get Changed Unauthorized files
+
+      - name: Set up Python
         if: steps.check-labels.outputs.skip != 'true'
-        id: changed-unauth-files
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Run Sensitive Files Check
+        if: steps.check-labels.outputs.skip != 'true'
         run: |
-          # Skip if not in PR context
-          if [ -z "${{ github.event.pull_request.base.sha }}" ]; then
-            echo "any_changed=false" >> $GITHUB_OUTPUT
-            exit 0
-          fi
+           # Determine base and head commits for comparison
+           HEAD_SHA="${{ github.event.pull_request.head.sha || github.sha }}"
+           BASE_SHA=$(git merge-base "${{ github.event.pull_request.base.sha }}" "$HEAD_SHA")
 
-          # Determine base and head commits for comparison
-          HEAD_SHA="${{ github.event.pull_request.head.sha || github.sha }}"
-          BASE_SHA=$(git merge-base "${{ github.event.pull_request.base.sha }}" "$HEAD_SHA")
-
-          # Define sensitive files pattern
-          SENSITIVE_FILES=(
-            '.flake8$'
-            '.pydocstyle$'
-            'pyproject.toml$'
-            '.env..*$'
-            'vitest.config.js$'
-            'src/App.tsx$'
-            '^.github/.*'
-            '^env.example$'
-            '.node-version$'
-            '.husky/.*' 'scripts/.*'
-            'src/style/.*'
-            'schema.graphql$'
-            'package.json$'
-            'package-lock.json$'
-            'tsconfig.json$'
-            '^.gitignore$'
-            '.eslintrc.json$'
-            '.eslintignore$'
-            '.prettierrc$'
-            '.prettierignore$'
-            'vite.config.ts$'
-            '^docker/docker-compose.prod.yaml$'
-            '^docker/docker-compose.dev.yaml$'
-            '^docker/Dockerfile.dev$'
-            '^docker/Dockerfile.prod$'
-            '^config/docker/setup/nginx.conf$'
-            '^config/docker/setup/nginx.prod.conf$'
-            'CODEOWNERS$'
-            'LICENSE$'
-            'setup.ts$'
-            '.coderabbit.yaml$'
-            'CODE_OF_CONDUCT.md$'
-            'CODE_STYLE.md$'
-            'CONTRIBUTING.md$'
-            'DOCUMENTATION.md$'
-            'INSTALLATION.md$'
-            'ISSUE_GUIDELINES.md$'
-            'PR_GUIDELINES.md$'
-            'README.md$'
-            '.*.pem$'
-            '.*.key$'
-            '.*.cert$'
-            '.*.password$'
-            '.*.secret$'
-            '.*.credentials$'
-            '.nojekyll$'
-            'yarn.lock$'
-            '^docs/docusaurus.config.ts$'
-            '^docs/sidebar..*'
-            'CNAME$'
-          )
-
-          # Check for changes in sensitive files
-          CHANGED_UNAUTH_FILES=""
-          for pattern in "${SENSITIVE_FILES[@]}"; do
-            FILES=$(git diff --name-only --diff-filter=ACMRD "$BASE_SHA" "$HEAD_SHA" | grep -E "$pattern" || true)
-
-            if [ ! -z "$FILES" ]; then
-              CHANGED_UNAUTH_FILES="$CHANGED_UNAUTH_FILES $FILES"
-            fi
-          done
-
-          # Trim and format output
-          CHANGED_UNAUTH_FILES=$(echo "$CHANGED_UNAUTH_FILES" | xargs)
-          echo "all_changed_files=$CHANGED_UNAUTH_FILES" >> $GITHUB_OUTPUT
-
-          # Check if any unauthorized files changed
-          if [ ! -z "$CHANGED_UNAUTH_FILES" ]; then
-            echo "any_changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "any_changed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: List all changed unauthorized files
-        if: steps.changed-unauth-files.outputs.any_changed == 'true'
-        env:
-          CHANGED_UNAUTH_FILES: ${{ steps.changed-unauth-files.outputs.all_changed_files }}
-        run: |
-          echo "::error::Unauthorized changes detected in sensitive files"
-          echo ""
-          for file in $CHANGED_UNAUTH_FILES; do
-            echo "- $file"
-          done
-          echo ""
-          echo "To override this, apply the 'ignore-sensitive-files-pr' label"
-          exit 1
+           python3 .github/workflows/scripts/sensitive_file_check.py \
+             --config .github/workflows/config/sensitive_files.txt \
+             --base_sha "$BASE_SHA" \
+             --head_sha "$HEAD_SHA"
 
   Count-Changed-Files:
     if: ${{ github.actor != 'dependabot[bot]' }}
